// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> renders bordered 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="fg6xadl"
  >
    Bordered
  </table>
</div>
`;

exports[`<Table /> renders compact 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="f1f8e8bi"
  >
    Compact
  </table>
</div>
`;

exports[`<Table /> renders fixed 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="fk5yox1"
  >
    Fixed
  </table>
</div>
`;

exports[`<Table /> renders horizontal 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="fjkta6w"
  >
    Horizontal
  </table>
</div>
`;

exports[`<Table /> renders loading 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="f10w3wv"
  >
    Loading
  </table>
</div>
`;

exports[`<Table /> renders middleAlign 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="ft4brx4"
  >
    Vertical
  </table>
</div>
`;

exports[`<Table /> renders striped 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="fmjpbe4"
  >
    Striped
  </table>
</div>
`;

exports[`<Table /> renders transparent 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="f7rx67x"
  >
    Transparent
  </table>
</div>
`;

exports[`<Table /> renders vertical 1`] = `
<div
  className="ff4hosz"
>
  <table
    className="f12qna1q"
  >
    Vertical
  </table>
</div>
`;
